implemented logic to calculate sumaDeControl implemented logic for formular fara valori